maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:38: error: Unmatched closing brace '}' ignored here
}
^