maze.island.IslandMaze.scala.code
override def run() {
  def keepLeftHand() {
    
      left()
      if ( ! isFacingWall()) {
        forward() 
        } else {
    					right()
    					if (! isFacingWall()) {
                forward
              } else {
                	right()
                	if (! isFacingWall()) {
                  	forward
                	} else {
                  right()
                }
              }
            }
  
			}
  while (getY()!=0) {
    setDirection(Direction.NORTH)
    if (! isFacingWall()) {forward}
    else {
      keepLeftHand()
    }
  }
  while (! isOverBaggle()) {
      keepLeftHand()
    }
  }
  pickupBaggle()
}